--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Lauenstein - Travel Worldwide"
+      content="Lauenstein | Tourismus Dienstleistungen"
     />
-    <meta property="og:title" content="Lauenstein - Travel Worldwide">
+    <meta property="og:title" content="Lauenstein | Tourismus Dienstleistungen">
     <!-- <meta property="og:image" content="https://i.imgur.com/pyKBVc7.png"> -->
-    <meta property="og:description" content="Lauenstein - Travel Worldwide">
+    <meta property="og:description" content="Lauenstein | Tourismus Dienstleistungen">
     <meta property="og:url" content="https://Lauenstein.world">
-    <meta property="og:type" content="Lauenstein - Travel Worldwide"/>
+    <meta property="og:type" content="Lauenstein | Tourismus Dienstleistungen"/>
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Lauenstein - Travel Worldwide</title>
+    <title>Lauenstein | Tourismus Dienstleistungen</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
