--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌎</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Lauenstein | Tourismus Dienstleistungen"
-    />
+    <meta name="description" content="Bei Touristische Dienstleistungen Dr. Hans-Joachim lauenstein finden sie Reiseleiter, Lektoren, Fotografen und Beratungsservice">
+    <meta name="keywords" content="Lauenstein, Tourismus, Service, Hans-Joachim, Dienstleistungen, Reiseleiter, Lektor, Vorträge, Südamerika, Nordeuropa, Scouting, Fotografie, Hapag lloyd">
+    <meta content="Tourismus Dienstleistungen Dr. Hans-Joachim Lauenstein - Startseite" property="og:title">
+    <meta content="website" property="og:type">
+    <meta content="https://lauenstein.world/" property="og:url">
     <meta property="og:title" content="Lauenstein | Tourismus Dienstleistungen">
     <!-- <meta property="og:image" content="https://i.imgur.com/pyKBVc7.png"> -->
     <meta property="og:description" content="Lauenstein | Tourismus Dienstleistungen">
